[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/puzzle_dependencies/views/settings_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/puzzle_dependencies/views/edit_type_dialog.tscn" type="PackedScene" id=2]

[node name="SettingsDialog" type="WindowDialog"]
margin_right = 353.0
margin_bottom = 223.0
window_title = "Settings"
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 343.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Margin/VBox"]
margin_right = 333.0
margin_bottom = 14.0
text = "Thing types:"

[node name="ColorsList" type="Tree" parent="Margin/VBox"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_root = true

[node name="Center" type="CenterContainer" parent="Margin/VBox"]
margin_top = 183.0
margin_right = 333.0
margin_bottom = 203.0
size_flags_horizontal = 3

[node name="DoneButton" type="Button" parent="Margin/VBox/Center"]
margin_left = 143.0
margin_right = 189.0
margin_bottom = 20.0
text = "Done"

[node name="EditTypeDialog" parent="." instance=ExtResource( 2 )]

[connection signal="about_to_show" from="." to="." method="_on_SettingsDialog_about_to_show"]
[connection signal="button_pressed" from="Margin/VBox/ColorsList" to="." method="_on_ColorsList_button_pressed"]
[connection signal="item_edited" from="Margin/VBox/ColorsList" to="." method="_on_ColorsList_item_edited"]
[connection signal="pressed" from="Margin/VBox/Center/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="confirmed" from="EditTypeDialog" to="." method="_on_EditTypeDialog_confirmed"]
